apply plugin: 'war'

ext.jbossHome = hasProperty('jbossHome') ? jbossHome : "${rootDir}/wildfly-8.0.0.Final"

sourceCompatibility = 1.7

repositories() {
    maven { url 'https://repository.jboss.org/nexus/content/groups/public-jboss' }
    maven { url 'https://repository.jboss.org/nexus/content/repositories' }
    maven { url 'https://repository.jboss.org/nexus/content/repositories/thirdparty-releases' }
    maven { url 'http://repo.springsource.org/libs-milestone/' }
    mavenCentral()
}

dependencies {
    compile project(':InternetBankingLibrary')

    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
    compile 'org.hibernate:hibernate-validator:4.3.1.Final'	// HIBERNATE VALIDATOR!!! Версия именно 4. С пятой глюки =)

    compile 'org.springframework.security:spring-security-crypto:3.2.5.RELEASE'

    // WebSphere AS libs & arquillian-was-remote lib
//    providedCompile fileTree(dir: "/opt/IBM/WID7_WTE/runtimes/bi_v7/lib")


    providedCompile 'javax:javaee-api:6.0'

//    compile 'org.wildfly:wildfly-spec-api:8.2.0.Final'
  //  testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-gradle-depchain:2.2.0-beta-1'
  //  testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-depchain:2.2.0-beta-1'
    testCompile 'org.jboss.arquillian:arquillian-bom:1.1.2.Final-wildfly-1'
    testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.1.2.Final-wildfly-1'
//    testRuntime 'org.jboss.logging:jboss-logging:3.1.4.GA'
    testRuntime 'org.jboss.logmanager:log4j-jboss-logmanager:1.1.1.Final'

    providedCompile 'org.slf4j:slf4j-api:1.7.7'
//    compile 'org.slf4j:slf4j-log4j12:1.7.7'

    /**
     * Embedded means it runs in the same JVM, it still needs the full installation
     */
    testRuntime 'org.wildfly:wildfly-arquillian-container-embedded:8.0.0.Final'
}

test {
    jvmArgs '-XX:MaxPermSize=256m'

    /**
     * Installation of JBOSS to use for testing, this can be set here
     * or in the arquillian.xml.
     */
    environment 'JBOSS_HOME', '/opt/wildfly-8.2.0.Final'
//    environment 'JBOSS_HOME', 'C:\\Program Files (x86)\\wildfly-8.2.0.Final'
    /**
     * WildFly embedded default logging
     */
    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
    //systemProperty 'java.util.logging.manager', 'org.apache.log4j.LogManager'
    //systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.log4j'

}

jar {
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
}